<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
    >
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical"
            >
    <ImageView
            android:id="@+id/imageView"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:maxHeight="150dp" android:layout_gravity="left"
            android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/textView"
        style="@style/H1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/loginPrompt"
        android:textSize="21sp"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                style="@style/H2"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/companyName"
                android:textSize="17sp"/>

            <Spinner
                android:id="@+id/companies"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" android:layout_gravity="left">

            <TextView
                style="@style/H2"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/userName"
                android:textSize="17sp"/>

            <EditText
                style="@style/input_field"
                android:id="@+id/userName"
                android:layout_column="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                style="@style/H2"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/password"
                android:textSize="17sp"/>

            <EditText
                style="@style/input_field"
                android:id="@+id/password"
                android:layout_column="1"
                android:inputType="textPassword"/>
        </TableRow>
    </TableLayout>

    <Button
        style="@style/button"
        android:id="@+id/loginButton"
        android:layout_width="150sp"
        android:background="@drawable/buttonshape"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/tv_error"
        style="@style/errorView"
        android:layout_below="@id/loginButton"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

